--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "mysql": "^2.18.1",
     "next": "13.4.8",
     "postcss": "8.4.24",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/mysql": "^2.15.21"
   }
 }
