--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-virtualized": "^9.22.5",
+    "react-window": "^1.8.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/mysql": "^2.15.21"
+    "@types/mysql": "^2.15.21",
+    "@types/react-virtualized": "^9.21.22",
+    "@types/react-window": "^1.8.5"
   }
 }
